--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,9 @@ description: My journey to learn flutter.
 dependencies:
   flutter:
     sdk: flutter
+  sqflite: any
+  path_provider: any
+  intl: ^0.15.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
